--- a/app/src/main/res/layout/dialog_fragment_group_recipients.xml
+++ b/app/src/main/res/layout/dialog_fragment_group_recipients.xml
@@ -1,188 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-Copyright (c) 2020 Proton Technologies AG
-
-This file is part of ProtonMail.
-
-ProtonMail is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-ProtonMail is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with ProtonMail. If not, see https://www.gnu.org/licenses/.
--->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+  ~ Copyright (c) 2020 Proton Technologies AG
+  ~
+  ~ This file is part of ProtonMail.
+  ~
+  ~ ProtonMail is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~
+  ~ ProtonMail is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+  ~ GNU General Public License for more details.
+  ~
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
+  -->
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/labels_dialog_bg"
     android:minWidth="@dimen/manage_labels_min_width"
-    android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/fields_default_space_small_plus">
+    android:padding="@dimen/padding_l">
 
-    <LinearLayout
-        android:id="@+id/header"
+    <ImageView
+        android:id="@+id/dialog_group_recipients_group_icon_image_view"
+        android:layout_width="@dimen/size_icon_l"
+        android:layout_height="@dimen/size_icon_l"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:src="@drawable/ic_contact_groups"/>
+
+    <TextView
+        android:id="@+id/dialog_group_recipients_group_name_text_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="@id/dialog_group_recipients_group_icon_image_view"
+        app:layout_constraintBottom_toBottomOf="@id/dialog_group_recipients_group_icon_image_view"
+        app:layout_constraintStart_toEndOf="@id/dialog_group_recipients_group_icon_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginStart="@dimen/padding_l"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textAppearance="@style/ProtonTextView.Title"
+        android:textSize="20sp"
+        tools:text="Group 1"/>
+
+    <me.proton.core.presentation.ui.view.ProtonCheckbox
+        android:id="@+id/dialog_group_recipients_select_all_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/dialog_group_recipients_group_icon_image_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/select_deselect_all"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/dialog_group_recipients_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/activity_horizontal_margin"
-        android:paddingEnd="@dimen/activity_horizontal_margin"
-        tools:ignore="UseCompoundDrawables">
+        app:layout_constraintTop_toBottomOf="@id/dialog_group_recipients_select_all_checkbox"
+        app:layout_constraintBottom_toTopOf="@id/dialog_group_recipients_apply_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0"
+        android:layout_marginVertical="@dimen/padding_m"
+        android:divider="@null" />
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:orientation="horizontal"
-            tools:ignore="RtlSymmetry">
-
-            <ImageView
-                android:id="@+id/groupIcon"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_gravity="center_vertical"
-                android:layout_marginEnd="@dimen/fields_default_space_small"
-                android:layout_marginRight="@dimen/fields_default_space_small"
-                android:src="@drawable/fab_ic_contact_groups"
-                android:tint="@color/lead_gray"
-                tools:ignore="ContentDescription,VectorDrawableCompat" />
-
-            <TextView
-                android:id="@+id/title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:minLines="1"
-                android:textStyle="bold"
-                android:padding="0dp"
-                android:textColor="@color/black_lighter"
-                android:textSize="20sp" />
-
-        </LinearLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/fields_default_space"
-            android:orientation="horizontal">
-
-            <androidx.appcompat.widget.AppCompatCheckBox
-                android:id="@+id/check"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_alignParentEnd="true"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="end"
-                android:layout_marginStart="@dimen/fields_default_space_small"
-                android:layout_marginLeft="@dimen/fields_default_space_small"
-                app:buttonTint="@color/new_purple" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_gravity="center_vertical"
-                android:layout_toStartOf="@id/check"
-                android:layout_toLeftOf="@id/check"
-                android:gravity="center_vertical"
-                android:paddingEnd="@dimen/fields_default_space"
-                android:paddingRight="@dimen/fields_default_space"
-                android:text="@string/select_deselect_all"
-                android:textColor="@color/black_lighter"
-                android:textSize="@dimen/h3"
-                tools:ignore="RtlSymmetry" />
-        </RelativeLayout>
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/listWrapper"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/footer"
-        android:layout_below="@id/header"
-        android:layout_marginTop="@dimen/fields_default_space"
-        android:background="@color/white">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recipientsRecyclerView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:divider="@null" />
-
-        <TextView
-            android:id="@+id/noRecipients"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:gravity="center"
-            android:text="@string/no_recipients"
-            android:textColor="@color/iron_gray"
-            android:textSize="@dimen/h2"
-            android:visibility="gone" />
-    </FrameLayout>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1px"
-        android:layout_above="@id/footer"
-        android:background="#D9DADB" />
-
-    <LinearLayout
-        android:id="@+id/footer"
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/dialog_group_recipients_no_recipients_text_view"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginTop="@dimen/activity_horizontal_margin_small"
-        android:background="@color/white"
-        android:orientation="horizontal"
-        android:paddingLeft="@dimen/activity_horizontal_margin_small"
-        android:paddingRight="@dimen/activity_horizontal_margin_small">
+        app:layout_constraintTop_toBottomOf="@id/dialog_group_recipients_select_all_checkbox"
+        app:layout_constraintBottom_toTopOf="@id/dialog_group_recipients_apply_button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:text="@string/no_recipients"
+        android:textAppearance="@style/Proton.Text.Default.Weak"
+        android:textColor="@color/text_weak"
+        android:visibility="gone"
+        tools:visibility="visible"/>
 
-        <Button
-            android:id="@+id/cancel"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:minWidth="58dp"
-            android:minHeight="35dp"
-            android:padding="0dp"
-            android:text="@string/cancel"
-            android:textAllCaps="true"
-            android:textColor="@drawable/text_only_button_selector"
-            android:textSize="@dimen/h4"
-            tools:ignore="ButtonStyle" />
+    <me.proton.core.presentation.ui.view.ProtonButton
+        android:id="@+id/dialog_group_recipients_apply_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="@string/label_apply" />
 
-        <Button
-            android:id="@+id/done"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_weight="1"
-            android:background="@android:color/transparent"
-            android:minWidth="58dp"
-            android:minHeight="35dp"
-            android:padding="0dp"
-            android:text="@string/label_apply"
-            android:textAllCaps="true"
-            android:textColor="@drawable/text_only_button_selector"
-            android:textSize="@dimen/h4"
-            tools:ignore="ButtonStyle" />
-    </LinearLayout>
-</RelativeLayout>
+    <me.proton.core.presentation.ui.view.ProtonButton
+        android:id="@+id/dialog_group_recipients_cancel_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/padding_m"
+        style="@style/ProtonButton.Borderless.Text"
+        app:layout_constraintEnd_toStartOf="@id/dialog_group_recipients_apply_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:textColor="?attr/colorError"
+        android:text="@string/cancel" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
