Style Snackbars to V4
MAILAND-2227

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -130,7 +130,7 @@
 	<!--lights-->
 	<color name="light_indicator">#6A6A9C</color>
 
-    <color name="warning">@color/red_orange</color>
+    <color name="warning">@color/orange</color>
 
     <color name="label_buttons">#9497ce</color>
     <!-- labels -->
