Create spam_score color
Previously it was using warning, which now is used for other scopes and assigned to orange, instead of the previous red_orange

MAILAND-2245

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -188,6 +188,8 @@
     <color name="selectable_color">#e7e5fb</color>
 
     <color name="hyperlink_color">#0000EE</color>
+
+    <color name="spam_score">@color/red_orange</color>
     <!-- endregion -->
 
 </resources>
