Fixes the share icon not being visible in the message header view
Uses the new icon from Figma and removes the old icon resources.

MAILAND-1898

--- a/app/src/main/res/menu/share_menu.xml
+++ b/app/src/main/res/menu/share_menu.xml
@@ -22,7 +22,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <item
         android:id="@+id/share"
-        android:icon="@drawable/share_icon"
+        android:icon="@drawable/ic_share"
         android:title="@string/share"
         app:showAsAction="ifRoom" />
 
