--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -133,6 +133,15 @@
         android:visibility="visible"
         tools:text="@string/spam_score_101" />
 
+    <ch.protonmail.android.details.presentation.view.MessageDetailsDecryptionErrorBannerView
+        android:id="@+id/decryptionErrorView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/padding_l"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/spamScoreView" />
+
     <!-- add webview through code use application context to avoid memory leaks -->
     <!-- https://code.google.com/p/android/issues/detail?id=9375 -->
     <LinearLayout
@@ -142,7 +151,7 @@
         android:focusableInTouchMode="true"
         android:descendantFocusability="blocksDescendants"
         android:animateLayoutChanges="true"
-        app:layout_constraintTop_toBottomOf="@id/spamScoreView"
+        app:layout_constraintTop_toBottomOf="@id/decryptionErrorView"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical" />
 
