Added a wrapper to the message body results after decryption to be able to distinguish if the body was decrypted or not. Because even if decryption fails we still need to show a body.
MAILAND-2283

--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -133,7 +133,7 @@
         android:visibility="visible"
         tools:text="@string/spam_score_101" />
 
-    <ch.protonmail.android.details.presentation.view.MessageDetailsDecryptionErrorBannerView
+    <ch.protonmail.android.details.presentation.view.DecryptionErrorBanner
         android:id="@+id/decryptionErrorView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
