Adds labels to the collapsed message view
Introduces the new components and modifies existing in order to bring the labels to the
collapsed message view. In addition, removes the old attachment icon and replaces it with
the new one, in places where the old one was still being used.

MAILAND-2255

--- a/app/src/main/res/layout/attachment_list_item.xml
+++ b/app/src/main/res/layout/attachment_list_item.xml
@@ -32,10 +32,10 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
         <ImageView
             android:layout_width="@dimen/attachment_list_spacing"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:contentDescription="@null"
             android:scaleType="center"
-            android:src="@drawable/attached_main" />
+            android:src="@drawable/ic_paper_clip" />
 
         <ch.protonmail.android.views.CustomFontTextView
             android:id="@+id/embedded_image_attachment"
