Create DecryptionErrorBanner programmatically over using xml
- Rename DecryptionErrorBanner file to match the class name
- Delete now unused layout_message_details_decryption_error_info

MAILAND-2283

--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -140,6 +140,7 @@
         android:layout_margin="@dimen/padding_l"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        tools:visibility="visible"
         app:layout_constraintTop_toBottomOf="@id/spamScoreView" />
 
     <!-- add webview through code use application context to avoid memory leaks -->
