--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -112,8 +112,8 @@
         <ch.protonmail.android.views.messageDetails.BottomActionsView
             android:id="@+id/mailboxActionsView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:layout_height="0dp"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
