Fixes to recipients not appearing in some cases in the expanded view
Fixed my using a linear layout instead of a constraint layout- the fault
lied with the constraints not being caluclated correctly when
the view was recycled.

MAILAND-2268

--- a/app/src/main/res/layout/layout_message_details_recipients_container.xml
+++ b/app/src/main/res/layout/layout_message_details_recipients_container.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Proton Technologies AG
   ~
   ~ This file is part of ProtonMail.
@@ -18,10 +17,10 @@
   ~ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
   -->
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/recipientsContainer"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
