--- a/app/src/main/res/layout/contact_groups_email_list_item_selectable.xml
+++ b/app/src/main/res/layout/contact_groups_email_list_item_selectable.xml
@@ -35,30 +35,36 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
 
     <TextView
         android:id="@+id/name"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_l"
         android:layout_marginTop="@dimen/padding_l"
+        android:ellipsize="end"
         android:gravity="center_vertical"
+        android:lines="1"
         android:textColor="@color/text_norm"
         android:textSize="@dimen/h4"
         app:layout_constraintBottom_toTopOf="@+id/email"
+        app:layout_constraintEnd_toStartOf="@+id/check"
         app:layout_constraintStart_toEndOf="@+id/mailAvatar"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="@tools:sample/full_names" />
+        tools:text="@tools:sample/lorem/random" />
 
     <TextView
         android:id="@+id/email"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/padding_l"
         android:layout_marginTop="@dimen/padding_m"
+        android:ellipsize="end"
         android:gravity="center_vertical"
+        android:lines="1"
         android:textColor="@color/text_weak"
         android:textSize="@dimen/h6"
+        app:layout_constraintEnd_toStartOf="@+id/check"
         app:layout_constraintStart_toEndOf="@+id/mailAvatar"
         app:layout_constraintTop_toBottomOf="@+id/name"
-        tools:text="@tools:sample/cities" />
+        tools:text="@tools:sample/full_names" />
 
     <com.google.android.material.checkbox.MaterialCheckBox
         android:id="@+id/check"
@@ -66,7 +72,7 @@ along with ProtonMail. If not, see https://www.gnu.org/licenses/.
         android:layout_height="wrap_content"
         android:clickable="false"
         android:focusable="false"
-        android:padding="0dp"
+        android:padding="@dimen/padding_m"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
