--- a/app/src/main/res/layout/activity_mailbox.xml
+++ b/app/src/main/res/layout/activity_mailbox.xml
@@ -114,6 +114,8 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:visibility="invisible"
+            android:elevation="@dimen/elevation_m"
+            android:background="@color/background_norm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
