--- a/app/src/main/res/layout/activity_message_details.xml
+++ b/app/src/main/res/layout/activity_message_details.xml
@@ -93,6 +93,7 @@
             android:id="@+id/layout_no_connectivity_info"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="@dimen/margin_s"
             app:layout_constraintBottom_toTopOf="@id/messageDetailsActionsView"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
@@ -101,6 +102,8 @@
             android:id="@+id/messageDetailsActionsView"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:elevation="@dimen/elevation_m"
+            android:background="@color/background_norm"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent" />
