Remove the reply action from the bottom action bar in the details screen and add the move to folder action
MAILAND-2348

--- a/app/src/main/res/layout/layout_bottom_actions.xml
+++ b/app/src/main/res/layout/layout_bottom_actions.xml
@@ -37,7 +37,7 @@
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
         android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_reply"
+        android:src="@drawable/ic_envelope_dot"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/secondActionImageButton"
         app:layout_constraintStart_toStartOf="parent"
@@ -48,7 +48,7 @@
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
         android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_envelope_dot"
+        android:src="@drawable/ic_trash"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/thirdActionImageButton"
         app:layout_constraintStart_toEndOf="@id/firstActionImageButton"
@@ -59,7 +59,7 @@
         android:layout_width="@dimen/message_details_actions_button_size"
         android:layout_height="@dimen/message_details_actions_button_size"
         android:background="?selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_trash"
+        android:src="@drawable/ic_folder_move"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/fourthActionImageButton"
         app:layout_constraintStart_toEndOf="@id/secondActionImageButton"
