--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,6 +57,11 @@
     <dimen name="elevation_xl">8dp</dimen> // standard button high 8dp
     <dimen name="elevation_xxl">16dp</dimen> // standard nav drawer 16dp
 
+    <!-- generic margin -->
+    <dimen name="margin_s">4dp</dimen>
+    <dimen name="margin_m">8dp</dimen>
+    <dimen name="margin_l">16dp</dimen>
+
     <!-- Toolbars -->
     <dimen name="toolbar_padding_start">0dp</dimen>
     <dimen name="toolbar_padding_end">8dp</dimen>
