Change the background of the details screen to background_secondary
MAILAND-2348

--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -22,6 +22,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/background_norm"
+    android:elevation="@dimen/elevation_s"
     android:focusableInTouchMode="true"
     android:descendantFocusability="blocksDescendants"
     android:animateLayoutChanges="true">
