Improves the previous solution
The improvement relies less on the lenght of the delay, as we introduce a retry
mechanism when wrapping message content height, in case the content has not been loaded
after the initial delay period. Additionally moves some code around and uses better names.

MAILAND-2361

--- a/app/src/main/res/layout/layout_message_details_web_view.xml
+++ b/app/src/main/res/layout/layout_message_details_web_view.xml
@@ -153,7 +153,7 @@
         android:layout_height="@dimen/constrained_message_content_view_size"
         android:focusableInTouchMode="true"
         android:descendantFocusability="blocksDescendants"
-        android:animateLayoutChanges="true"
+        android:animateLayoutChanges="false"
         app:layout_constraintTop_toBottomOf="@id/decryptionErrorView"
         app:layout_constraintBottom_toBottomOf="parent"
         android:orientation="vertical" />
